--- a/app/src/main/res/layout/activity_buy.xml
+++ b/app/src/main/res/layout/activity_buy.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.malkinfo.puzzle.BuyActivity">
     <Button
         android:id="@+id/btnHome"
@@ -12,6 +13,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
         android:text="Home"
+        android:layout_gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.479"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,12 +29,83 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnHome" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view_product"
-        android:layout_margin="8dp"
-        android:scrollbars="vertical"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Name product"
+                android:textSize="14sp">
+            </TextView>
+            <TextView
+                android:id="@+id/txt_slot_play"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Slot play"
+                android:layout_marginStart="10dp"
+                android:textSize="14sp">
+            </TextView>
+            <TextView
+                android:id="@+id/txt_price_product"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Price product"
+                android:textColor="#03A9F4"
+                android:layout_marginStart="10dp"
+                android:textSize="14sp">
+            </TextView>
+            <Button
+                android:layout_marginStart="10dp"
+                android:text="@string/buy"
+                android:id="@+id/one_1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
 
+            </Button>
+        </LinearLayout>
+    </FrameLayout>
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Name product"
+                android:textSize="14sp">
+            </TextView>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Slot play"
+                android:layout_marginStart="10dp"
+                android:textSize="14sp">
+            </TextView>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Price product"
+                android:textColor="#03A9F4"
+                android:layout_marginStart="10dp"
+                android:textSize="14sp">
+            </TextView>
+            <Button
+                android:layout_marginStart="10dp"
+                android:text="@string/buy"
+                android:id="@+id/five_5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+            </Button>
+        </LinearLayout>
+    </FrameLayout>
 </LinearLayout>
