--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,17 +12,16 @@
 
     <TextView
         android:id="@+id/moves"
-        android:textStyle="bold|normal"
-        android:textSize="22sp"
-        android:paddingStart="15dp"
-        android:paddingEnd="15dp"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/app_name"
         android:elevation="15dp"
-     />
+        android:paddingStart="15dp"
+        android:paddingTop="10dp"
+        android:paddingEnd="15dp"
+        android:paddingBottom="10dp"
+        android:text="@string/app_name"
+        android:textSize="22sp"
+        android:textStyle="bold|normal" />
     <View
         android:background="@color/black"
         android:layout_width="match_parent"
