--- a/app/src/main/res/layout/activity_buy.xml
+++ b/app/src/main/res/layout/activity_buy.xml
@@ -28,84 +28,10 @@
         android:text="List Products"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnHome" />
-
-    <FrameLayout
+    <ListView
+        android:id="@+id/list_view_product"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Name product"
-                android:textSize="14sp">
-            </TextView>
-            <TextView
-                android:id="@+id/txt_slot_play"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Slot play"
-                android:layout_marginStart="10dp"
-                android:textSize="14sp">
-            </TextView>
-            <TextView
-                android:id="@+id/txt_price_product"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Price product"
-                android:textColor="#03A9F4"
-                android:layout_marginStart="10dp"
-                android:textSize="14sp">
-            </TextView>
-            <Button
-                android:layout_marginStart="10dp"
-                android:text="@string/buy"
-                android:id="@+id/one_1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
-            </Button>
-        </LinearLayout>
-    </FrameLayout>
-
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Name product"
-                android:textSize="14sp">
-            </TextView>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Slot play"
-                android:layout_marginStart="10dp"
-                android:textSize="14sp">
-            </TextView>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Price product"
-                android:textColor="#03A9F4"
-                android:layout_marginStart="10dp"
-                android:textSize="14sp">
-            </TextView>
-            <Button
-                android:layout_marginStart="10dp"
-                android:text="@string/buy"
-                android:id="@+id/five_5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-            </Button>
-        </LinearLayout>
-    </FrameLayout>
+    </ListView>
 </LinearLayout>
